--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pino": "^8.17.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "superjson": "^2.2.1",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
