--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.0",
     "cross-env": "^7.0.3",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
@@ -23,9 +24,11 @@
     "npm-run-all": "^4.1.5",
     "pino": "^8.17.2",
     "react": "^18",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.0",
     "tsx": "^4.7.0",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
