--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
